fix: Remove box shadow in dark mode

--- a/src/styles/PinComponent.css
+++ b/src/styles/PinComponent.css
@@ -4,6 +4,10 @@ a.pin {
   height: 400px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 
+  @media (prefers-color-scheme: dark) {
+    box-shadow: none;
+  }
+
   button {
     display: none;
     position: absolute;
