--- a/src/styles/PinPage.css
+++ b/src/styles/PinPage.css
@@ -10,6 +10,10 @@
       object-fit: cover;
       border-radius: 12px;
       box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+      @media (prefers-color-scheme: dark) {
+        box-shadow: none;
+      }
     }
   }
 
